<resources>
    <string name="app_name">AppCato</string>

    <string name="home">INICIO</string>
    <string name="novedades">NOVEDADES</string>
    <string name="calendario">CALENDARIO</string>
    <string name="programacion">PROGRAMACIÓN</string>
    <string name="homenaje">HOMENAJE</string>
    <string name="paises">PAISES</string>
    <string name="videos">VIDEOS</string>
    <string name="busqueda">busqueda</string>


    <!-- Clave de api key de google maps -->
    <string name="api_key_maps">AIzaSyCiFjPiaNbjodw08DhM0VvtFgUKeu8zEzw</string>

    <!-- Clave de api key de youtube -->
    <string name="api_key_youtube">AIzaSyAkGu10t3H_5VqI0k972nb7AaZ6xKSpxGw</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textCalendar">Calendario</string>

    <!-- Esto es una prueba -->
</resources>
